Create full responsive NotificationsView with dynamic filters, Top-Up ReWearPay, and Seller Product CRUD management